# mhgit

./: Cargo.toml  LICENSE  Makefile  README.md  TODO.md
githelp/: add.txt  am.txt  annotate.txt  apply.txt  archive.txt  bisect.txt  blame.txt  branch.txt  bundle.txt  cat-file.txt  check-attr.txt  check-ignore.txt  check-mailmap.txt  check-ref-format.txt  checkout-index.txt  checkout.txt  cherry-pick.txt  cherry.txt  clean.txt  clone.txt  column.txt  commit-graph.txt  commit-tree.txt  commit.txt  config.txt  count-objects.txt  credential-cache.txt  credential-store.txt  credential.txt  daemon.txt  describe.txt  diff-files.txt  diff-index.txt  diff-tree.txt  diff.txt  difftool.txt  fast-export.txt  fast-import.txt  fetch-pack.txt  fetch.txt  (+83 more)
src/: lib.rs  status.rs
src/commands/: mod.rs
tests/: mhgit.rs
